@@ -1,7 +1,13 @@
 # 370project
-- Project is in the preliminary stages as of now just consists of a database and methods to communitcate with the database
-- The methods created, create the embedded database and add data to the tables, as well as display the data
-- Testing is done by signing into the virtual machine and running the jar file
-- To use the program sign into the virutal machine and execute a ls command to make sure a Planner.jar file exists.
-- If not cd to the home directory.
-- There will be a README.txt file in the home directory as well with instructions of how to execute the program.
+- Java version need to be at least 13.0.2.
+- Running the program will depend on the system that you are using
+
+- Mac (requires the javaFX directory in the repository)
+- Downloading the whole repository is the easiest way. Once downloaded change
+  the current working directory in terminal to be the project. When you do a ls
+  command you should see all the files that were in the repository.
+- The next step is to use the following command to launch the product
+- "java --module-path javaFX/ --add-modules javafx.controls,javafx.fxml 
+  -jar 370project.jar"
+- From here the program should open and you can begin using it.
+- 
